# OpenACCProjects

./: .gitignore  README.md
Hello/: CMakeLists.txt  hello.cc
JacobiIteration/: CMakeLists.txt  jacobi_iteration.cc
Saxpy/: CMakeLists.txt  saxpy.cc
